[package]
name = "rs-srt"
version = "0.1.0"
edition = "2024"
default-run = "rs-srt"

[dependencies]
anyhow = "1.0.100"
srt = { path = "./crates/srt" }
hls = { path = "./crates/hls" }
mpeg = { path = "./crates/mpeg" }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[workspace]
members = [".", "crates/*"]
default-members = [".", "crates/*"]
